# ai-code-reviewer

./: README.md
server/: main.py  pyproject.toml
server/app/api/v1/: code_review.py
server/app/core/: config.py  database.py
server/app/schemas/: code_review.py
server/app/services/: code_review_service.py  ollama_service.py
